fix overflow sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ body {
 
 /* For WebKit based browsers */
 .scrollbar-nav::-webkit-scrollbar {
-  width: 8px;
+  width: 2px;
 }
 
 .scrollbar-nav::-webkit-scrollbar-thumb {
